--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         </p>
 
         <h1>Mekong Delta</h1>
-        <p >Where the big river meets the ocean, the vilagers are happier because of all the fish... </p> 
+        <p >Where the big river meets the ocean, the villagers are happier because of all the fish... </p> 
         <img src=".\Assets\DSCF0629.JPG" height="1000" width="1300">
         </p>
         
